# pb-StarPhase

./: CHANGELOG.md  Cargo.toml  LICENSE-THIRDPARTY.json  README.md  build.rs
.github/workflows/: check-release.yml  test-ci.yml
data/: README.md  default_db_config.json
data/v0.6.1/: cpic_20230914.json
data/v1.5.0/: pbstarphase_20251002.db_stat.txt
data/v2.0.0/: pbstarphase_20251106.db_stat.txt
docs/: database.md  debug_outputs.md  install.md  methods.md  performance.md  supported_genes.md  user_guide.md
src/: build_database.rs  db_stat.rs  diplotyper.rs  lib.rs  main.rs
src/cli/: core.rs  db_build.rs  db_stat.rs  diplotype.rs  mod.rs
src/cyp2d6/: caller.rs  chaining.rs  debug.rs  definitions.rs  errors.rs  haplotyper.rs  mod.rs  region.rs  region_label.rs  region_variants.rs  vcf_writer.rs  visualization.rs
src/data_types/: alleles.rs  coordinates.rs  database.rs  db_const.rs  gene_definition.rs  hgvs.rs  mapping.rs  mod.rs  normalized_variant.rs  pgx_diplotype.rs  pgx_diplotypes.rs  pgx_structural_variants.rs  pharmvar_api_results.rs  region_variants.rs  starphase_json.rs
src/database/: cpic_api_results.rs  db_config.rs  db_const.rs  gene_definition.rs  mod.rs  pgx_database.rs  pharmvar_api_results.rs
src/hla/: alleles.rs  caller.rs  debug.rs  mapping.rs  mod.rs  processed_match.rs  realigner.rs
src/util/: file_io.rs  homopolymers.rs  htslib_quickparse.rs  mapping.rs  mod.rs  sequence.rs  stats.rs
src/visualization/: debug_bam_writer.rs  igv_session_writer.rs  mod.rs
test_data/: README.md  test_reference.fa
test_data/CACNA1S/: CPIC_API.json  (+7 more)
(+30 files in other folders)
