[package]
name = "pbstarphase"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitcl"] }

[dependencies]
bio = "1.5.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.4.1", features = ["derive"] }
csv = "1.2.2"
env_logger = "0.10.0"
exitcode = "1.1.2"
flate2 = "1.0.28"
hiphase = { tag = "v1.2.1", git = "https://github.com/PacificBiosciences/HiPhase.git" }
itertools = "0.12.1"
layout-rs = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.20"
minimap2 = "0.1.23"
quick-xml = "0.36.1"
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "rustls-tls"] }
rust-htslib = { version = "0.44.1", default-features = false, features = ["static"] }
rustc-hash = "1.1.0"
rust-lib-reference-genome = { tag = "v0.2.0", git = "https://github.com/holtjma/rust-lib-reference-genome.git" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
simple-error = "0.3.0"
statrs = "0.16.0"
strum = "0.26.2"
strum_macros = "0.26.2"
tempfile = "3.14.0"
thiserror = "1.0.63"
waffle_con = { tag = "v0.4.4", git = "https://github.com/PacificBiosciences/waffle_con.git" }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
